# VerityLens

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PATENT_PENDING.md  PRIVACY.md  README.md
browser-extension/: build.sh  manifest.json
browser-extension/background/: background.js  service-worker.js
browser-extension/common/: verity-core.js
browser-extension/common/i18n/: en.json  i18n-core.js  zh-CN.json
browser-extension/common/modules/: asr.js  cross-modal.js  ocr.js  translator.js
browser-extension/content/: verity-injector.js  verity-styles.css  verity-translator.js
browser-extension/options/: options.css  options.html  options.js
browser-extension/popup/: popup.css  popup.html  popup.js
browser-extension/screenshots/: README.md
browser-extension/store/: PERMISSIONS.md
browser-extension/store/listings/: chrome-en.txt  chrome-zh-CN.txt  edge-notes.txt  firefox-zh-CN.txt
browser-extension/tests/: test-suite.html  test-suite.node.js
browser-extension/welcome/: welcome.css  welcome.html  welcome.js
cli/: pyproject.toml
cli/verity_lens_cli/: __init__.py  cli.py
desktop-assistant/: index.html  package.json  vite.config.js
desktop-assistant/src/: main.js  styles.css
desktop-assistant/src-tauri/: Cargo.toml  tauri.conf.json
desktop-assistant/src-tauri/src/: lib.rs  main.rs
docs/legal/: LEGAL_RISK_ASSESSMENT.md
scripts/: bump_version.py
server/fly-nas/: app.py  docker-compose.yml  docker-compose.yml.bak.2026-06-06-17-22  requirements.txt
userscript/: verity-lens.user.js
