[project]
name = "verity-lens-cli"
version = "0.4.0"
description = "VerityLens CLI · 真实透镜命令行工具"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
verity = "verity_lens_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"