[package]
name = "verity-lens"
version = "0.4.0"
description = "VerityLens · 真实透镜 · 桌面助手"
authors = ["panxiao"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "verity_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]